      \code{fileEncoding} argument, for convenience.

      \item Graphics devices can add attributes to their description in
      \code{.Device} and \code{.Devices}.  Several of those included with
      \R use a \code{"filepath"} attribute.

      \item \code{pmatch()} uses hashing in more cases and so is faster
      at the expense of using more memory. (\PR{15697})
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item When building \R as a shared library, the
      \option{-L${R_HOME}/lib${R_ARCH}} flag is placed earlier in the
      link commands used during installation and when packages are
      installed: this help ensure that the current build has priority if
      an \R shared library has already been installed by e.g.
      \command{install-libR} in a library mentioned in \env{LDFLAGS}
      (and not in \sQuote{your system's library directory} as
      documented). (Wish of \PR{15790}.)
    }
  }

  \subsection{UTILITES}{
    \itemize{
      \item There is some support for testing the \code{\\dontrun}. and
      \code{\\donttest} parts of examples in packages.

      \code{tools::testInstalledPackage()} accepts new arguments
      \code{commentDontrun = FALSE} and \code{commentDonttest = FALSE}.

      \command{R CMD check} gains \option{--run-dontrun} and
      \option{--run-donttest} options.
    }
  }

  %% \subsection{BUG FIXES}{
  %%   \itemize{
  %%   }
  %% }
}

\section{\Rlogo CHANGES IN R 3.1.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \command{configure} option \option{--with-internal-tzcode}
      can now be used with variable \code{rsharedir}.

      \item When \code{attach()} reports conflicts, it does so
      compatibly with \code{library()} by using \code{message()}.

      \item \command{R CMD Sweave} no longer cleans any files,
      compatibly with versions of \R prior to 3.1.0.

      \item \code{tools::buildVignette()} and \code{tools::buildVignettes()}